results/archive/b60/compile_global_avg_pool_kernel.dp_20260311_104145.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260311_104145
Kernel: global_avg_pool_kernel.dp
Source: /workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:45:13: error: use of undeclared identifier 'item'
   45 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |             ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:45:33: error: use of undeclared identifier 'item'
   45 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |                                 ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:45:59: error: use of undeclared identifier 'item'
   45 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |                                                           ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:47:16: error: use of undeclared identifier 'item'
   47 |   int laneId = item.get_local_id(0) & 0x1F;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:62:10: error: use of undeclared identifier '__shfl_down_sync'
   62 |     S += __shfl_down_sync(0xFFFFFFFF, S, offset);
      |          ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:79:55: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
   79 |                    const T* prevLayerBias, bool nhwc, cudaStream_t stream) {
      |                                                       ^~~~~~~~~~~~
      |                                                       ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:79:68: error: variable has incomplete type 'ihipStream_t'
   79 |                    const T* prevLayerBias, bool nhwc, cudaStream_t stream) {
      |                                                                    ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:96:27: error: expected expression
   96 |     globalAvgPool_kernel<<<blocks, kBlockSize, 0, stream>>>(
      |                           ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:96:59: error: expected expression
   96 |     globalAvgPool_kernel<<<blocks, kBlockSize, 0, stream>>>(
      |                                                           ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:105:36: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  105 |                                    cudaStream_t stream);
      |                                    ^~~~~~~~~~~~
      |                                    ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:79:68: error: variable has incomplete type 'ihipStream_t'
   79 |                    const T* prevLayerBias, bool nhwc, cudaStream_t stream) {
      |                                                                    ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:102:15: note: in instantiation of function template specialization 'lczero::sycldnn_backend::globalAvgPool<float>' requested here
  102 | template void globalAvgPool<float>(int N, int C, float* output,
      |               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:108:35: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  108 |                                   cudaStream_t stream);
      |                                   ^~~~~~~~~~~~
      |                                   ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:79:68: error: variable has incomplete type 'ihipStream_t'
   79 |                    const T* prevLayerBias, bool nhwc, cudaStream_t stream) {
      |                                                                    ^
/workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp:106:15: note: in instantiation of function template specialization 'lczero::sycldnn_backend::globalAvgPool<sycl::detail::half_impl::half>' requested here
  106 | template void globalAvgPool<sycl::half>(int N, int C, sycl::half* output, const sycl::half* input,
      |               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
13 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260311_104145'
+ echo 'Kernel: global_avg_pool_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/global_avg_pool_kernel.dp.cpp -o /workspace/build_sycl/global_avg_pool_kernel.dp.o
+ tee /workspace/results/b60/compile_global_avg_pool_kernel.dp_20260311_104145.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
